@@ -20,8 +20,6 @@
 #include <string.h>
 #include <sys/types.h>
 
-#include "main/snort.h"
-
 #include "nhttp_module.h"
 
 const Parameter NHttpModule::nhttp_params[] =
